# stm32c0-metapac-example

./: Cargo.toml  README.mkdn  memory.x  openocd.cfg
.cargo/: config
src/: main.rs
